# dijkstra-geodesics

./: CMakeLists.txt  README.md
dijkstra/: CMakeLists.txt  dijkstra.cpp  dijkstra.h
main/: CImg.h  CMakeLists.txt  image-graph.cpp  image-graph.h  main.cpp
test/: CMakeLists.txt
test/testdij/: CMakeLists.txt  main.cpp  testdij.cpp  testdij.h
